add animate.css and update classes in skills toggle css

--- a/index.html
+++ b/index.html
@@ -19,21 +19,17 @@
     <!-- Custom CSS -->
     <link href="css/grayscale.css" rel="stylesheet">
 
-    <!-- carousel css -->
+    <!-- Carousel css -->
     <link rel="stylesheet" type="text/css" href="css/slick.css">
     <link rel="stylesheet" type="text/css" href="css/slick-theme.css">
+
+    <!-- Animate css  -->
+    <link rel="stylesheet" href="css/animate.css">
 
     <!-- Custom Fonts -->
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
-
-
-
-    <!-- Dev icons -->
-    <!-- <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/master/devicon.min.css"> -->
-    <!-- slick carousel -->
-
 
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -90,8 +86,8 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
-                        <h1 class="brand-heading">Bonjour,</h1>
-                        <h2 class="brand-heading">Monde</h2>
+                        <h1 class="brand-heading animated bounceInDown">Bonjour,</h1>
+                        <h2 class="brand-heading animated bounceInDown">Monde</h2>
                         <a href="#about" class="btn btn-circle h2age-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
                         </a>
@@ -120,14 +116,14 @@
 
     <!-- Project section-->
 
-    <section id="projects" class="projects-section text-center">
+<section id="projects" class="projects-section text-center">
         <div class="container">
             <div class="col-lg-8 col-lg-offset-2">
             <h2>Projects</h2>
             <div class="single-item center-block">
                 <div class="carousel-image">
                     <p class="project-title"><i class="fa fa-desktop"></i><a href="http://www.castifi.com">Castifi</a></p>
-                    <p class="project-text">A platform aimed at digitizing casting for background actors.</p>
+                    <p class="project-text">A platform aimed at digitizing casting for skill_background actors.</p>
                     <img src="img/castifi-home.png">
                     <p class="tech-text">Technologies: Angular.js, Node.js, MongoDB, Express, Bootstrap, CSS, Heroku, TravisCI, Mongolab, Grunt, Bower, & TDD with Mocha/Chai.</p>
                 </div>
@@ -155,6 +151,7 @@
             </div>
         </div>
     </section>
+
     <!-- end project section -->
 
     <!-- skills section -->
@@ -164,72 +161,72 @@
             <ul class="list-inline banner-social-buttons">
                 <div class="row list-inline banner-social-buttons">
                     <li>
-                        <div id="f1_container">
-                            <div id="f1_card" class="shadow">
-                              <div class="front face">
+                        <div id="skill_container">
+                            <div id="skill_card" class="shadow">
+                              <div class="skill_front skill_face">
                                 <img class="devicon" src="img/angularjs-plain.svg"/>
                               </div>
-                              <div class="back face center">
+                              <div class="skill_back skill_face center">
                                 <p>angular.js</p>
                               </div>
                             </div>
                         </div>
                     </li>
                     <li>
-                        <div id="f1_container">
-                            <div id="f1_card" class="shadow">
-                              <div class="front face">
+                        <div id="skill_container">
+                            <div id="skill_card" class="shadow">
+                              <div class="skill_front skill_face">
                                 <img class="devicon" src="img/bootstrap-plain.svg">
                               </div>
-                              <div class="back face center">
+                              <div class="skill_back skill_face center">
                                 <p>bootstrap</p>
                               </div>
                             </div>
                         </div>
                     </li>
                     <li>
-                        <div id="f1_container">
-                        <div id="f1_card" class="shadow">
-                          <div class="front face">
+                        <div id="skill_container">
+                        <div id="skill_card" class="shadow">
+                          <div class="skill_front skill_face">
                            <img class="devicon" src="img/css3-plain.svg">
                           </div>
-                          <div class="back face center">
+                          <div class="skill_back skill_face center">
                             <p>CSS3</p>
                           </div>
                         </div>
                         </div>
                     </li>
                     <li>
-                        <div id="f1_container">
-                        <div id="f1_card" class="shadow">
-                          <div class="front face">
+                        <div id="skill_container">
+                        <div id="skill_card" class="shadow">
+                          <div class="skill_front skill_face">
                             <img class="devicon" src="img/html5-plain.svg">
                           </div>
-                          <div class="back face center">
+                          <div class="skill_back skill_face center">
                             <p>HTML5</p>
                           </div>
                         </div>
                         </div>
                     </li>
                     <li>
-                        <div id="f1_container">
-                        <div id="f1_card" class="shadow">
-                          <div class="front face">
+                        <div id="skill_container">
+                        <div id="skill_card" class="shadow">
+                          <div class="skill_front skill_face">
                             <img class="devicon" src="img/javascript-plain.svg">
                           </div>
-                          <div class="back face center">
+                          <div class="skill_back skill_face center">
                             <p>javascript</p>
                           </div>
                         </div>
                         </div>
                     </li>
                     <li>
-                        <div id="f1_container">
-                        <div id="f1_card" class="shadow">
-                          <div class="front face">
+                        <div id="skill_container">
+                        <div id="skill_card" class="shadow">
+                          <div class="skill_front skill_face">
                             <img class="devicon" src="img/mongodb-plain.svg">
                           </div>
-                          <div class="back face center">
+                          <div class="skill_back skill_face center">
                             <p>mongodb</p>
                           </div>
                         </div>
@@ -239,72 +236,72 @@
 
                 <div class="row list-inline banner-social-buttons bottom-row">
                     <li>
-                        <div id="f1_container">
-                            <div id="f1_card" class="shadow">
-                              <div class="front face">
+                        <div id="skill_container">
+                            <div id="skill_card" class="shadow">
+                              <div class="skill_front skill_face">
                                 <img class="devicon" src="img/nodejs-original.svg">
                               </div>
-                              <div class="back face center">
+                              <div class="skill_back skill_face center">
                                 <p>node.js</p>
                               </div>
                             </div>
                         </div>
                     </li>
                     <li>
-                        <div id="f1_container">
-                            <div id="f1_card" class="shadow">
-                              <div class="front face">
+                        <div id="skill_container">
+                            <div id="skill_card" class="shadow">
+                              <div class="skill_front skill_face">
                                 <img class="devicon" src="img/grunt-line.svg">
                               </div>
-                              <div class="back face center">
+                              <div class="skill_back skill_face center">
                                 <p>grunt</p>
                               </div>
                             </div>
                         </div>
                     </li>
                     <li>
-                        <div id="f1_container">
-                            <div id="f1_card" class="shadow">
-                                <div class="front face">
+                        <div id="skill_container">
+                            <div id="skill_card" class="shadow">
+                                <div class="skill_front skill_face">
                                     <img class="devicon" src="img/bower-plain.svg">
                                 </div>
-                                <div class="back face center">
+                                <div class="skill_back skill_face center">
                                     <p>bower</p>
                                 </div>
                             </div>
                         </div>
                     </li>
                     <li>
-                        <div id="f1_container">
-                            <div id="f1_card" class="shadow">
-                                <div class="front face">
+                        <div id="skill_container">
+                            <div id="skill_card" class="shadow">
+                                <div class="skill_front skill_face">
                                     <img class="devicon" src="img/github-original.svg">
                                 </div>
-                                <div class="back face center">
+                                <div class="skill_back skill_face center">
                                     <p>github</p>
                                 </div>
                             </div>
                         </div>
                     </li>
                     <li>
-                        <div id="f1_container">
-                            <div id="f1_card" class="shadow">
-                                <div class="front face">
+                        <div id="skill_container">
+                            <div id="skill_card" class="shadow">
+                                <div class="skill_front skill_face">
                                     <img class="devicon" src="img/heroku-plain.svg">
                                 </div>
-                                <div class="back face center">
+                                <div class="skill_back skill_face center">
                                     <p>heroku</p>
                                 </div>
                             </div>
                         </div>
                     </li>
                     <li>
-                        <div id="f1_container">
-                            <div id="f1_card" class="shadow">
-                                <div class="front face">
+                        <div id="skill_container">
+                            <div id="skill_card" class="shadow">
+                                <div class="skill_front skill_face">
                                     <img class="devicon" src="img/sass-original.svg">
                                 </div>
-                                <div class="back face center">
+                                <div class="skill_back skill_face center">
                                     <p>sass</p>
                                 </div>
                             </div>
