add media query + bs col to li items to make skills section mobile-responsive

--- a/index.html
+++ b/index.html
@@ -120,10 +120,11 @@
         <div class="container">
             <div class="col-lg-8 col-lg-offset-2">
             <h2>Projects</h2>
+
             <div class="single-item center-block">
                 <div class="carousel-image">
                     <p class="project-title"><i class="fa fa-desktop"></i><a href="http://www.castifi.com">Castifi</a></p>
-                    <p class="project-text">A platform aimed at digitizing casting for skill_background actors.</p>
+                    <p class="project-text">A platform aimed at digitizing casting for background actors.</p>
                     <img src="img/castifi-home.png">
                     <p class="tech-text">Technologies: Angular.js, Node.js, MongoDB, Express, Bootstrap, CSS, Heroku, TravisCI, Mongolab, Grunt, Bower, & TDD with Mocha/Chai.</p>
                 </div>
@@ -152,6 +153,7 @@
         </div>
     </section>
 
+
     <!-- end project section -->
 
     <!-- skills section -->
@@ -160,7 +162,7 @@
             <h2>Skills</h2>
             <ul class="list-inline banner-social-buttons">
                 <div class="row list-inline banner-social-buttons">
-                    <li>
+                    <li class="col-xs-2 class="col-xs-2"">
                         <div id="skill_container">
                             <div id="skill_card" class="shadow">
                               <div class="skill_front skill_face">
@@ -172,7 +174,7 @@
                             </div>
                         </div>
                     </li>
-                    <li>
+                    <li class="col-xs-2 class="col-xs-2"">
                         <div id="skill_container">
                             <div id="skill_card" class="shadow">
                               <div class="skill_front skill_face">
@@ -184,7 +186,7 @@
                             </div>
                         </div>
                     </li>
-                    <li>
+                    <li class="col-xs-2">
                         <div id="skill_container">
                         <div id="skill_card" class="shadow">
                           <div class="skill_front skill_face">
@@ -196,7 +198,7 @@
                         </div>
                         </div>
                     </li>
-                    <li>
+                    <li class="col-xs-2">
                         <div id="skill_container">
                         <div id="skill_card" class="shadow">
                           <div class="skill_front skill_face">
@@ -208,7 +210,7 @@
                         </div>
                         </div>
                     </li>
-                    <li>
+                    <li class="col-xs-2">
                         <div id="skill_container">
                         <div id="skill_card" class="shadow">
                           <div class="skill_front skill_face">
@@ -220,7 +222,7 @@
                         </div>
                         </div>
                     </li>
-                    <li>
+                    <li class="col-xs-2">
                         <div id="skill_container">
                         <div id="skill_card" class="shadow">
                           <div class="skill_front skill_face">
@@ -234,8 +236,8 @@
                     </li>
                 </div>
 
-                <div class="row list-inline banner-social-buttons bottom-row">
-                    <li>
+                <div class="row skills_row list-inline banner-social-buttons bottom-row">
+                    <li class="col-xs-2 col-sm-2 col-m-2">
                         <div id="skill_container">
                             <div id="skill_card" class="shadow">
                               <div class="skill_front skill_face">
@@ -247,7 +249,7 @@
                             </div>
                         </div>
                     </li>
-                    <li>
+                    <li class="col-xs-2 col-sm-2 col-m-2">
                         <div id="skill_container">
                             <div id="skill_card" class="shadow">
                               <div class="skill_front skill_face">
@@ -259,7 +261,7 @@
                             </div>
                         </div>
                     </li>
-                    <li>
+                    <li class="col-xs-2 col-sm-2 col-m-2">
                         <div id="skill_container">
                             <div id="skill_card" class="shadow">
                                 <div class="skill_front skill_face">
@@ -271,7 +273,7 @@
                             </div>
                         </div>
                     </li>
-                    <li>
+                    <li class="col-xs-2 col-sm-2 col-m-2">
                         <div id="skill_container">
                             <div id="skill_card" class="shadow">
                                 <div class="skill_front skill_face">
@@ -283,7 +285,7 @@
                             </div>
                         </div>
                     </li>
-                    <li>
+                    <li class="col-xs-2 col-sm-2 col-m-2">
                         <div id="skill_container">
                             <div id="skill_card" class="shadow">
                                 <div class="skill_front skill_face">
@@ -295,7 +297,7 @@
                             </div>
                         </div>
                     </li>
-                    <li>
+                    <li class="col-xs-2 col-sm-2 col-m-2">
                         <div id="skill_container">
                             <div id="skill_card" class="shadow">
                                 <div class="skill_front skill_face">
