--- a/index.html
+++ b/index.html
@@ -17,11 +17,7 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="css/grayscale.css" rel="stylesheet">
-
-    <!-- Carousel css -->
-    <link rel="stylesheet" type="text/css" href="css/slick.css">
-    <link rel="stylesheet" type="text/css" href="css/slick-theme.css">
+    <link href="css/main.css" rel="stylesheet">
 
     <!-- Animate css  -->
     <link rel="stylesheet" href="css/animate.css">
@@ -50,7 +46,7 @@
                     <i class="fa fa-bars"></i>
                 </button>
                 <a class="navbar-brand page-scroll" href="#page-top">
-                    <i class="fa fa-anchor"></i>  <span class="light">C.</span> Purtlebaugh
+                    <i class="fa fa-anchor"></i>  <span class="light">C. </span>Purtlebaugh
                 </a>
             </div>
 
@@ -115,40 +111,53 @@
     <!-- end about section -->
 
     <!-- Project section-->
-
-<section id="projects" class="projects-section text-center">
+      <section id="projects" class="projects-section text-center">
         <div class="container">
-            <div class="col-lg-8 col-lg-offset-2">
+            <div class="col-lg-12">
             <h2>Projects</h2>
+                <!-- carousel -->
+                <div id="myCarousel" class="carousel slide">
+                  <!-- Indicators -->
+                  <ol class="carousel-indicators">
+                    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                    <li data-target="#myCarousel" data-slide-to="1"></li>
+                    <li data-target="#myCarousel" data-slide-to="2"></li>
+                  </ol>
+                  <div class="carousel-inner">
+                    <div class="item active">
+                      <img src="img/castifi-about.png" class="img-responsive">
+                      <div class="container">
+                        <div class="carousel-caption">
+                          </div>
+                      </div>
+                    </div>
+                    <div class="item">
+                      <img src="img/castifi-about.png" class="img-responsive">
+                      <div class="container">
+                        <div class="carousel-caption">
 
-            <div class="single-item center-block">
-                <div class="carousel-image">
-                    <p class="project-title"><i class="fa fa-desktop"></i><a href="http://www.castifi.com">Castifi</a></p>
-                    <p class="project-text">A platform aimed at digitizing casting for background actors.</p>
-                    <img src="img/castifi-home.png">
-                    <p class="tech-text">Technologies: Angular.js, Node.js, MongoDB, Express, Bootstrap, CSS, Heroku, TravisCI, Mongolab, Grunt, Bower, & TDD with Mocha/Chai.</p>
-                </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="item">
+                      <img src="img/castifi-about.png" class="img-responsive">
+                      <div class="container">
+                        <div class="carousel-caption">
 
-                <div class="carousel-image">
-                    <p class="project-title"><i class="fa fa-desktop"></i><a href="http://www.castifi.com">Castifi</a></p>
-                    <p class="project-text">A platform aimed at digitizing casting for background actors.</p>
-                    <img src="img/basic-submission-page.png">
-                    <p class="tech-text">Technologies: Angular.js, Node.js, MongoDB, Express, Bootstrap, CSS, Heroku, TravisCI, Mongolab, Grunt, Bower, & TDD with Mocha/Chai.</p>
-                </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
 
-                <div class="carousel-image">
-                    <p class="project-title"><i class="fa fa-desktop"></i><a href="http://www.castifi.com">Castifi</a></p>
-                    <p class="project-text">A platform aimed at digitizing casting for background actors.</p>
-                    <img src="img/castifi-about.png">
-                    <p class="tech-text">Technologies: Angular.js, Node.js, MongoDB, Express, Bootstrap, CSS, Heroku, TravisCI, Mongolab, Grunt, Bower, & TDD with Mocha/Chai. </p>
+                  <!-- Controls -->
+                  <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+                    <i class="glyphicon glyphicon-chevron-left"></i>
+                  </a>
+                  <a class="right carousel-control" href="#myCarousel" data-slide="next">
+                    <i class="glyphicon glyphicon-chevron-right"></i>
+                  </a>
                 </div>
-
-                <div class="carousel-image">
-                    <p class="project-title"><i class="fa fa-desktop"></i><a href="http://www.castifi.com">Castifi</a></p>
-                    <p class="project-text">A platform aimed at digitizing casting for background actors.</p>
-                    <img src="img/castifi-initial-page.png">
-                    <p class="tech-text">Technologies: Angular.js, Node.js, MongoDB, Express, Bootstrap, CSS, Heroku, TravisCI, Mongolab, Grunt, Bower, & TDD with Mocha/Chai. </p>
-                </div>
+                <!-- /.carousel -->
             </div>
         </div>
     </section>
@@ -162,7 +171,7 @@
             <h2>Skills</h2>
             <ul class="list-inline banner-social-buttons">
                 <div class="row list-inline banner-social-buttons">
-                    <li class="col-xs-2 class="col-xs-2"">
+                    <li class="col-xs-2 col-sm-2 col-m-2">
                         <div id="skill_container">
                             <div id="skill_card" class="shadow">
                               <div class="skill_front skill_face">
@@ -174,7 +183,7 @@
                             </div>
                         </div>
                     </li>
-                    <li class="col-xs-2 class="col-xs-2"">
+                    <li class="col-xs-2 col-sm-2 col-m-2">
                         <div id="skill_container">
                             <div id="skill_card" class="shadow">
                               <div class="skill_front skill_face">
@@ -186,7 +195,7 @@
                             </div>
                         </div>
                     </li>
-                    <li class="col-xs-2">
+                    <li class="col-xs-2 col-sm-2 col-m-2">
                         <div id="skill_container">
                         <div id="skill_card" class="shadow">
                           <div class="skill_front skill_face">
@@ -198,7 +207,7 @@
                         </div>
                         </div>
                     </li>
-                    <li class="col-xs-2">
+                    <li class="col-xs-2 col-sm-2 col-m-2">
                         <div id="skill_container">
                         <div id="skill_card" class="shadow">
                           <div class="skill_front skill_face">
@@ -210,7 +219,7 @@
                         </div>
                         </div>
                     </li>
-                    <li class="col-xs-2">
+                    <li class="col-xs-2 col-sm-2 col-m-2">
                         <div id="skill_container">
                         <div id="skill_card" class="shadow">
                           <div class="skill_front skill_face">
@@ -222,7 +231,7 @@
                         </div>
                         </div>
                     </li>
-                    <li class="col-xs-2">
+                    <li class="col-xs-2 col-sm-2 col-m-2">
                         <div id="skill_container">
                         <div id="skill_card" class="shadow">
                           <div class="skill_front skill_face">
@@ -357,12 +366,6 @@
     <!-- Custom Theme JavaScript -->
     <script src="js/grayscale.js"></script>
 
-    <!-- slick carousel  -->
-    <script type="text/javascript" src="js/slick.js"></script>
-
-    <script type="text/javascript">
-        $('.single-item').slick();
-    </script>
 </body>
 
 </html>
