clean up index.html classes, spacing between h2, etc

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     </header>
 
     <!-- About Section -->
-    <section id="about" class="container content-section about-section text-center">
+    <section id="about" class="container content-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>About</h2>
@@ -104,17 +104,17 @@
                 <p>I obtained my B.A. in Philosophy from UCSB in summer '11 and completed General Assembly's Web Development Course in summer '15. My Philosophy degree and IT experience have honed my ability to identify and break down problems while being an artist allows me to approach solutions creatively. </p>
 
                 <p>My goal is to work with passionate, driven people so we can positively impact the world together. I'm currently searching for a fulltime developer role in the area of entertainment, media, or marketing. </p>
-
             </div>
         </div>
     </section>
     <!-- end about section -->
 
     <!-- Project section-->
-      <section id="projects" class="projects-section text-center">
-        <div class="container">
-            <div class="col-lg-12">
+    <section id="projects" class="container project-section text-center">
+        <div class="row">
+        <div class="col-lg-12">
             <h2>Projects</h2>
+            <p></p>
                 <!-- carousel -->
                 <div id="myCarousel" class="carousel slide">
                   <!-- Indicators -->
@@ -157,8 +157,8 @@
                     <i class="glyphicon glyphicon-chevron-right"></i>
                   </a>
                 </div>
-                <!-- /.carousel -->
-            </div>
+                    <!-- /.carousel -->
+                </div>
         </div>
     </section>
 
@@ -169,6 +169,7 @@
     <section id="skills" class="container content-section text-center">
         <div class="col-lg-12">
             <h2>Skills</h2>
+            <p></p>
             <ul class="list-inline banner-social-buttons">
                 <div class="row list-inline banner-social-buttons">
                     <li class="col-xs-2 col-sm-2 col-m-2">
