--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/bootstrap.css" rel="stylesheet">
 
     <!-- Custom CSS -->
     <link href="css/main.css" rel="stylesheet">
@@ -110,55 +110,60 @@
     <!-- end about section -->
 
     <!-- Project section-->
-    <section id="projects" class="container project-section text-center">
+    <section id="projects" class="project-section text-center">
         <div class="row">
-        <div class="col-lg-12">
-            <h2>Projects</h2>
-            <p></p>
-                <!-- carousel -->
-                <div id="myCarousel" class="carousel slide">
-                  <!-- Indicators -->
-                  <ol class="carousel-indicators">
-                    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-                    <li data-target="#myCarousel" data-slide-to="1"></li>
-                    <li data-target="#myCarousel" data-slide-to="2"></li>
-                  </ol>
-                  <div class="carousel-inner">
-                    <div class="item active">
-                      <img src="img/castifi-about.png" class="img-responsive">
-                      <div class="container">
-                        <div class="carousel-caption">
+            <div class="col-lg-12">
+                <h2>Projects</h2>
+                <p></p>
+                    <!-- carousel -->
+                    <div id="myCarousel" class="carousel slide">
+                      <!-- Indicators -->
+                      <ol class="carousel-indicators">
+                        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                        <li data-target="#myCarousel" data-slide-to="1"></li>
+                        <li data-target="#myCarousel" data-slide-to="2"></li>
+                      </ol>
+                      <div class="carousel-inner">
+                        <div class="item active">
+                          <img src="https://s3-us-west-1.amazonaws.com/cp-images/castifi-home.svg" class="img-responsive">
+                          <div class="container">
+                            <div class="carousel-caption">
+                                <h2><a href="http://www.castifi.com">CASTIFI</a></h2>
+                                <p class="project-text">On-demand casting for background actors.</p>
+                                <p><i class="fa fa-wrench"> MongoDB, Express, Node.js, Angular.js, Grunt, Heroku, TravisCI.</i></p>
+                            </div>
                           </div>
-                      </div>
-                    </div>
-                    <div class="item">
-                      <img src="img/castifi-about.png" class="img-responsive">
-                      <div class="container">
-                        <div class="carousel-caption">
+                        </div>
+                        <div class="item">
+                          <img src="https://s3-us-west-1.amazonaws.com/cp-images/bg.svg" class="img-responsive">
+                          <div class="container">
+                            <div class="carousel-caption">
+                                <h2><a href="http://www.boigirlofficial.com">BOIGIRL</a></h2>
+                                <p class="project-text">A simple band website.</p>
+                                <p><i class="fa fa-wrench"> HTML, CSS, Angular.js, Grunt, Hosted on S3.</i></p>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="item">
+                          <img src="img/castifi-about.png" class="img-responsive">
+                          <div class="container">
+                            <div class="carousel-caption">
 
+                            </div>
+                          </div>
                         </div>
                       </div>
-                    </div>
-                    <div class="item">
-                      <img src="img/castifi-about.png" class="img-responsive">
-                      <div class="container">
-                        <div class="carousel-caption">
 
-                        </div>
-                      </div>
+                      <!-- Controls -->
+                      <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+                        <i class="glyphicon glyphicon-chevron-left"></i>
+                      </a>
+                      <a class="right carousel-control" href="#myCarousel" data-slide="next">
+                        <i class="glyphicon glyphicon-chevron-right"></i>
+                      </a>
                     </div>
-                  </div>
-
-                  <!-- Controls -->
-                  <a class="left carousel-control" href="#myCarousel" data-slide="prev">
-                    <i class="glyphicon glyphicon-chevron-left"></i>
-                  </a>
-                  <a class="right carousel-control" href="#myCarousel" data-slide="next">
-                    <i class="glyphicon glyphicon-chevron-right"></i>
-                  </a>
-                </div>
                     <!-- /.carousel -->
-                </div>
+            </div>
         </div>
     </section>
 
