fix alignment of skills container

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
             <h2>Skills</h2>
             <p></p>
             <ul class="list-inline banner-social-buttons">
-                <div class="row list-inline banner-social-buttons">
+                <div class="row skill_row">
                     <li class="col-xs-2 col-sm-2 col-m-2">
                         <div id="skill_container">
                             <div id="skill_card" class="shadow">
@@ -251,7 +251,7 @@
                     </li>
                 </div>
 
-                <div class="row skills_row list-inline banner-social-buttons bottom-row">
+                <div class="row skill_row bottom-row">
                     <li class="col-xs-2 col-sm-2 col-m-2">
                         <div id="skill_container">
                             <div id="skill_card" class="shadow">
