update text on index, increased bottom row padding on skills section to hide during contact page scroll

--- a/index.html
+++ b/index.html
@@ -99,11 +99,11 @@
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>About</h2>
                 <p></p>
-                <p>I'm Casper (née Cassie), a full-stack web developer, singer, and writer who is passionate about learning and problem-solving. I front a post-hxc band <a href="http://www.boigirlofficial.com/#/">boigirl</a>, create pop music as <a href="http://www.baughleon.com">baughleon</a>, and occasionally contribute concert reviews to <a href="http://www.verbicidemagazine.com/?s=cassie+purtlebaugh">verbicide</a>.</p>
+                <p>Hi I'm Casper (née Cassie), a full-stack web developer, singer, and writer who is passionate about learning and problem-solving. I'm currently seeking a fulltime developer role in the field of entertainment, media, design or marketing. </p>
 
-                <p>I obtained my B.A. in Philosophy from UCSB in summer '11 and completed General Assembly's Web Development Course in summer '15. My Philosophy degree and IT experience have honed my ability to identify and break down problems while being an artist allows me to approach solutions creatively. </p>
+                <p>I obtained my B.A. in Philosophy from UCSB in summer '11 and completed General Assembly's Web Development Course in summer '15. Before GA I worked in IT for a few years. My Philosophy degree, IT experience, and developer training are a testament to my ability to break down complex problems while being an artist allows me to approach solutions creatively.</p>
 
-                <p>My goal is to work with passionate, driven people so we can positively impact the world together. I'm currently searching for a fulltime developer role in the area of entertainment, media, or marketing. </p>
+                <p>On that creative note, I front a post-hxc band called <a href="http://www.boigirlofficial.com/#/">boigirl</a>, create pop music as <a href="http://www.baughleon.com">baughleon</a>, and occasionally contribute concert reviews to online music sites such as <a href="http://www.verbicidemagazine.com/?s=cassie+purtlebaugh">verbicide</a>. </p>
             </div>
         </div>
     </section>
@@ -335,6 +335,7 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>Contact</h2>
+                <p></p>
                 <ul class="list-inline banner-social-buttons">
                     <li>
                         <a href="mailto:cassie.purtlebaugh@gmail.com" class="btn btn-default btn-lg"><i class="fa fa-envelope fa-fw"></i> <span class="network-name"></span></a>
