--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
                       <ol class="carousel-indicators">
                         <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
                         <li data-target="#myCarousel" data-slide-to="1"></li>
+                        <li data-target="#myCarousel" data-slide-to="2"></li>
                       </ol>
                       <div class="carousel-inner">
                         <div class="item active">
@@ -143,7 +144,16 @@
                             </div>
                           </div>
                         </div>
-
+                        <div class="item">
+                          <img src="https://s3-us-west-1.amazonaws.com/cp-images/bg.svg" class="img-responsive">
+                          <div class="container">
+                            <div class="carousel-caption">
+                                <h2><a href="http://www.boigirlofficial.com">BOIGIRL</a></h2>
+                                <p class="project-text">A simple band website.</p>
+                                <p><i class="fa fa-wrench"> HTML, CSS, Angular.js, Grunt, Hosted on S3.</i></p>
+                            </div>
+                          </div>
+                        </div>
                       </div>
 
                       <!-- Controls -->
