adjust col on contact li item section for improved mobile view

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                             <div class="carousel-caption">
                                 <h2><a href="http://www.castifi.com">CASTIFI</a></h2>
                                 <p class="project-text">On-demand casting for background actors.</p>
-                                <p><i class="fa fa-wrench"> MongoDB, Express, Node.js, Angular.js, Grunt, Heroku, TravisCI.</i></p>
+                                <p><i class="fa fa-wrench"></i> MongoDB, Express, Node.js, Angular.js, Grunt, Heroku, TravisCI.</p>
                             </div>
                           </div>
                         </div>
@@ -140,7 +140,7 @@
                             <div class="carousel-caption">
                                 <h2><a href="http://www.boigirlofficial.com">BOIGIRL</a></h2>
                                 <p class="project-text">A simple band website.</p>
-                                <p><i class="fa fa-wrench"> HTML, CSS, Angular.js, Grunt, Hosted on S3.</i></p>
+                                <p><i class="fa fa-wrench"></i> HTML, CSS, Angular.js, Grunt, Hosted on S3.</p>
                             </div>
                           </div>
                         </div>
@@ -150,7 +150,7 @@
                             <div class="carousel-caption">
                                 <h2><a href="http://www.boigirlofficial.com">BOIGIRL</a></h2>
                                 <p class="project-text">A simple band website.</p>
-                                <p><i class="fa fa-wrench"> HTML, CSS, Angular.js, Grunt, Hosted on S3.</i></p>
+                                <p><i class="fa fa-wrench"></i> HTML, CSS, Angular.js, Grunt, Hosted on S3.</p>
                             </div>
                           </div>
                         </div>
@@ -335,20 +335,20 @@
     <!-- Contact Section -->
     <section id="contact" class="container content-section text-center">
         <div class="row">
-            <div class="col-lg-8 col-lg-offset-2">
+            <div class="col-lg-4 col-lg-offset-4">
                 <h2>Contact</h2>
                 <p></p>
                 <ul class="list-inline banner-social-buttons">
-                    <li>
+                    <li  class="col-lg-3 col-xs-3 contact">
                         <a href="mailto:cassie.purtlebaugh@gmail.com" class="btn btn-default btn-lg"><i class="fa fa-envelope fa-fw"></i> <span class="network-name"></span></a>
                     </li>
-                    <li>
+                    <li class="col-lg-3 col-xs-3 contact">
                         <a href="https://twitter.com/baughleonmusic" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name"></span></a>
                     </li>
-                    <li>
+                    <li class="col-lg-3 col-xs-3 contact">
                         <a href="https://github.com/cpurtlebaugh" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name"></span></a>
                     </li>
-                    <li>
+                    <li class="col-lg-3 col-xs-3 contact">
                         <a href="https://www.linkedin.com/in/cassiepurtlebaugh" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name"></span></a>
                     </li>
                 </ul>
