add img assets for portfolio to project vs s3 img loading

--- a/index.html
+++ b/index.html
@@ -96,14 +96,14 @@
     <!-- About Section -->
     <section id="about" class="container content-section text-center">
         <div class="row">
-            <div class="col-lg-8 col-lg-offset-2">
+            <div class="col-sm-8 col-sm-offset-2 col-xs-10 col-xs-offset-1">
                 <h2>About</h2>
                 <p></p>
                 <p>Hi I'm Casper (née Cassie), a full-stack web developer, singer, and writer who is passionate about learning and problem-solving. I'm currently seeking a fulltime developer role in the field of entertainment, media, design or marketing. </p>
 
                 <p>I obtained my B.A. in Philosophy from UCSB in summer '11 and completed General Assembly's Web Development Course in summer '15. Before GA I worked in IT for a few years. My Philosophy degree, IT experience, and developer training are a testament to my ability to break down complex problems while being an artist allows me to approach solutions creatively.</p>
 
-                <p>On that creative note, I front a post-hxc band called <a href="http://www.boigirlofficial.com/#/">boigirl</a>, create pop music as <a href="http://www.baughleon.com">baughleon</a>, and occasionally contribute concert reviews to online music sites such as <a href="http://www.verbicidemagazine.com/?s=cassie+purtlebaugh">verbicide</a>. </p>
+                <p>On that creative note, I front a post-hxc band called <a href="https://www.youtube.com/watch?v=AKC9gK43X-U" target="_blank">boigirl</a>, create pop music as <a href="https://soundcloud.com/baughleon" target="_blank">baughleon</a>, and occasionally contribute concert reviews to online music sites such as <a href="http://www.verbicidemagazine.com/?s=cassie+purtlebaugh" target="_blank">verbicide</a>. </p>
             </div>
         </div>
     </section>
@@ -125,7 +125,7 @@
                       </ol>
                       <div class="carousel-inner">
                         <div class="item active">
-                          <img src="https://s3-us-west-1.amazonaws.com/cp-images/castifi-home.svg" class="img-responsive">
+                          <img src="img/castifi-home.svg" class="img-responsive">
                           <div class="container">
                             <div class="carousel-caption">
                                 <h2><a href="http://www.castifi.com">CASTIFI</a></h2>
@@ -135,7 +135,7 @@
                           </div>
                         </div>
                         <div class="item">
-                          <img src="https://s3-us-west-1.amazonaws.com/cp-images/bg.svg" class="img-responsive">
+                          <img src="img/bg.svg">
                           <div class="container">
                             <div class="carousel-caption">
                                 <h2><a href="http://www.boigirlofficial.com">BOIGIRL</a></h2>
@@ -145,12 +145,12 @@
                           </div>
                         </div>
                         <div class="item">
-                          <img src="https://s3-us-west-1.amazonaws.com/cp-images/bg.svg" class="img-responsive">
+                          <img src="img/music-twin.svg">
                           <div class="container">
                             <div class="carousel-caption">
-                                <h2><a href="http://www.boigirlofficial.com">BOIGIRL</a></h2>
-                                <p class="project-text">A simple band website.</p>
-                                <p><i class="fa fa-wrench"></i> HTML, CSS, Angular.js, Grunt, Hosted on S3.</p>
+                                <h2><a href="https://stark-brushlands-5281.herokuapp.com/">Music Twin</a></h2>
+                                <p class="project-text">A way for musicians to find where like-sounding artist's are trending</p>
+                                <p><i class="fa fa-wrench"></i> Ruby, Rails, CSS, HTML, Bootstrap, Last.fm API, Heroku.</p>
                             </div>
                           </div>
                         </div>
