change boigirl img to test for git pages display

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                           </div>
                         </div>
                         <div class="item">
-                          <img src="img/bg.svg">
+                          <img src="img/boigirl.svg">
                           <div class="container">
                             <div class="carousel-caption">
                                 <h2><a href="http://www.boigirlofficial.com">BOIGIRL</a></h2>
