added new bg site svg

--- a/index.html
+++ b/index.html
@@ -125,32 +125,32 @@
                       </ol>
                       <div class="carousel-inner">
                         <div class="item active">
-                          <img src="img/castifi-home.svg" class="img-responsive">
+                          <img src="img/castifi.svg">
                           <div class="container">
                             <div class="carousel-caption">
                                 <h2><a href="http://www.castifi.com">CASTIFI</a></h2>
                                 <p class="project-text">On-demand casting for background actors.</p>
-                                <p><i class="fa fa-wrench"></i> MongoDB, Express, Node.js, Angular.js, Grunt, Heroku, TravisCI.</p>
+                                <p><i class="fa fa-wrench"></i> MongoDB, Express, Node.js, Angular.js, Grunt, Heroku, Mongolab, & TravisCI.</p>
                             </div>
                           </div>
                         </div>
                         <div class="item">
-                          <img src="img/boigirl.svg">
-                          <div class="container">
-                            <div class="carousel-caption">
-                                <h2><a href="http://www.boigirlofficial.com">BOIGIRL</a></h2>
-                                <p class="project-text">A simple band website.</p>
-                                <p><i class="fa fa-wrench"></i> HTML, CSS, Angular.js, Grunt, Hosted on S3.</p>
-                            </div>
-                          </div>
-                        </div>
-                        <div class="item">
-                          <img src="img/music-twin.svg">
+                          <img src="img/musictwin.svg">
                           <div class="container">
                             <div class="carousel-caption">
                                 <h2><a href="https://stark-brushlands-5281.herokuapp.com/">Music Twin</a></h2>
                                 <p class="project-text">A way for musicians to find where like-sounding artist's are trending</p>
                                 <p><i class="fa fa-wrench"></i> Ruby, Rails, CSS, HTML, Bootstrap, Last.fm API, Heroku.</p>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="item">
+                          <img src="img/boigirl2.svg">
+                          <div class="container">
+                            <div class="carousel-caption">
+                                <h2><a href="http://www.boigirlofficial.com">BOIGIRL</a></h2>
+                                <p class="project-text">A clean band website.</p>
+                                <p><i class="fa fa-wrench"></i> HTML, CSS, Bootstrap, Font Awesome, hosted on Bitballoon.</p>
                             </div>
                           </div>
                         </div>
