small update to boigirl ex in carousel

--- a/index.html
+++ b/index.html
@@ -148,9 +148,19 @@
                           <img src="img/boigirl2.svg">
                           <div class="container">
                             <div class="carousel-caption">
-                                <h2><a href="http://www.boigirlofficial.com">BOIGIRL</a></h2>
+                                <h2><a href="http://tinker-parrot-78688.bitballoon.com/">BOIGIRL</a></h2>
                                 <p class="project-text">A clean band website.</p>
                                 <p><i class="fa fa-wrench"></i> HTML, CSS, Bootstrap, Font Awesome, hosted on Bitballoon.</p>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="item">
+                          <img src="img/boigirl2.svg">
+                          <div class="container">
+                            <div class="carousel-caption">
+                                <h2><a href="http://tinker-parrot-78688.bitballoon.com/">HANGMAN</a></h2>
+                                <p class="project-text">A timeless game transposed to the web.</p>
+                                <p><i class="fa fa-wrench"></i> HTML, CSS, Bootstrap, Canvas, hosted on Bitballoon.</p>
                             </div>
                           </div>
                         </div>
