--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                           </div>
                         </div>
                         <div class="item">
-                          <img src="img/boigirl3.svg">
+                          <img src="img/boigirlyo.jpg">
                           <div class="container">
                             <div class="carousel-caption">
                                 <h2><a href="http://tinker-parrot-78688.bitballoon.com/">BOIGIRL</a></h2>
