update bg web address to domain now

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                           <img src="img/boigirlyo.jpg">
                           <div class="container">
                             <div class="carousel-caption">
-                                <h2><a href="http://tinker-parrot-78688.bitballoon.com/">BOIGIRL</a></h2>
+                                <h2><a href="http://www.boigirlofficial.com">BOIGIRL</a></h2>
                                 <p class="project-text">A clean band website.</p>
                                 <p><i class="fa fa-wrench"></i> HTML, CSS, Bootstrap, Font Awesome, hosted on Bitballoon.</p>
                             </div>
